cloudinary front-end driven demo

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VITE_KEYCLOAK_URL=http://localhost:8080
 VITE_API_URL=http://localhost:8081
+
+VITE_CLOUDINARY_CLOUD_NAME=df323ikpz
+VITE_CLOUDINARY_UPLOAD_PRESET=product_images_unsigned
+VITE_CLOUDINARY_API_KEY=685177246742715
